--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 [dependencies]
 rlibc = "1.0"
 
-[dependencies.uefi-sys]
-path = "uefi-sys"
+[dependencies.efi]
+path = "efi"
 
 [lib]
 name = "akira"
