Add support for debug builds
Apparently all I needed to do was disable function sections and LTO

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ path = "efi"
 name = "akira"
 crate-type = ["staticlib"]
 
+[profile.dev]
+panic = "abort"
+
 [profile.release]
 panic = "abort"
 lto = true
