--- a/x86_64-unknown-akira.json
+++ b/x86_64-unknown-akira.json
@@ -1,16 +1,11 @@
 {
-    "llvm-target": "x86_64-unknown-none-win64",
+    "llvm-target": "x86_64-unknown-none-gnu",
     "target-endian": "little",
     "target-pointer-width": "64",
-    "os": "efi",
+    "os": "akira",
     "arch": "x86_64",
     "data-layout": "e-m:e-i64:64-f80:128-n8:16:32:64-S128",
     "function-sections": false,
-    "linker": "x86_64-efi-pe-ld",
-    "ar": "x86_64-efi-pe-ar",
-    "pre-link-args": ["-m64"],
     "features": "-sse3,-ssse3,-sse4.1,-sse4.2,-3dnow,-3dnowa,-avx,-avx2",
-    "no-compiler-rt": true,
-    "disable-redzone": true,
-    "eliminate-frame-pointer": false
+    "no-compiler-rt": true
 }
