Rename to "Gensokyo"
Closes #2

--- a/x86_64-unknown-gensokyo.json
+++ b/x86_64-unknown-gensokyo.json
@@ -2,7 +2,7 @@
     "llvm-target": "x86_64-unknown-none-gnu",
     "target-endian": "little",
     "target-pointer-width": "64",
-    "os": "akira",
+    "os": "gensokyo",
     "arch": "x86_64",
     "data-layout": "e-m:e-i64:64-f80:128-n8:16:32:64-S128",
     "function-sections": false,
