--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "akira"
+name = "gensokyo"
 version = "0.1.0"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
@@ -10,7 +10,7 @@ rlibc = "1.0"
 path = "efi"
 
 [lib]
-name = "akira"
+name = "gensokyo"
 crate-type = ["staticlib"]
 
 [profile.dev]
