Add half of the initialization code
The other half is an exercise for the reader

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 [dependencies]
 rlibc = "1.0"
+spin = "0.4.3"
 
 [dependencies.efi]
 path = "efi"
